Bug #13054 start backup command return may be interrpted
Submitted: 8 Sep 2005 9:34 Modified: 14 Sep 2005 5:44
Reporter: Tomas Ulin
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:4.1.15 -> OS:
Assigned to: Tomas Ulin Target Version:

[8 Sep 2005 9:34] Tomas Ulin
Description:
start backup command return may be interrpted

resulting in printout in ndb_mgm that "start backup failed"

How to repeat:
connect 2 clients to a server

issue start backup on one
issue show on the other before backup i completed
[8 Sep 2005 9:36] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/29479
[8 Sep 2005 13:25] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/29496
[8 Sep 2005 14:54] Tomas Ulin
fixed in 4.1.15 and 5.0.13
[14 Sep 2005 5:44] Mike Hillyer
Documented in 5.0.13 and 4.1.15 changelogs:

<listitem><para>
       The NDB <literal>START BACKUP</literal> command could be interrupted by a
<literal>SHOW</literal> command. (Bug #13054)
      </para></listitem>