Bug #13054  	start backup command return may be interrpted